# Couplatis

./: .cspell.json  .gitignore  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.changeset/: breezy-crews-brake.md  lucky-turtles-float.md
.github/workflows/: lint.yml  release.yml  test.yml
scripts/: bootstrap.mjs
src/couplatis/: __init__.py  config.py  model.py  runner.py  utils.py
tests/: check_env.py  test_env.py
