[project]
name = "couplatis"
version = "0.1.0"
description = "A deep learning-based study of the dynamical properties of nonlinear coupled neural networks"
authors = [
    { name = "Valublity", email = "2646411177@qq.com" },
    { name = "苏向夜", email = "fu050409@163.com" },
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[[tool.pdm.source]]
url = "https://download.pytorch.org/whl/cu124"
verify_ssl = true
name = "torch"

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.2"]
